# langchain-examples

./: .env.example  .gitignore  README.md  agent_dynamic_filtering_tools_by_runtime_context.py  agent_dynamic_filtering_tools_by_state.py  agent_dynamic_system_prompt_by_user_context.py  agent_dynamicmodels.py  agent_memory_custom_state_Schema.py  agent_runtime_tool_registration.py  agent_streaming.py  agent_structured_output_provider_strategy.py  agent_structured_output_tool_strategy.py  agent_tool_error_handling.py  basicagent.py  pyproject.toml
agents/: README.md  agent_dynamic_filtering_tools_by_runtime_context.py  agent_dynamic_filtering_tools_by_store_feature.py  agent_dynamic_system_prompt_by_user_context.py  agent_dynamicmodels.py  agent_memory_custom_state_Schema.py  agent_model_ollama.py  agent_streaming.py  agent_structured_output_provider_strategy.py  agent_structured_output_tool_strategy.py  agent_tool_error_handling.py  model_check_paid_credits_llms.py
frontend/: 01agent_basic_frontend.py  AgentGenerativeUI.tsx  EXAMPLES_AND_USECASES.md  GENERATIVE_UI_GUIDE.md  QUICK_START.md  README.md  agent_generative_ui_backend.py
longterm-memory/: 01_memory_write_pg.py
messages/: 01_model_simpleprompt.py  02_model_message.py  03_model_message_dict_style.py  04_model_message_system_persona.py  README.md
model/: 01_model_invoke.py  02_model_stream.py  03_model_stream_by_blocktype.py  04_model_toolcalling.py  05_model_toolcalling_execution.py  06_model_structured_output_pydantic .py  07_model_structured_output_pydantic_nestedobject.py  08_model_reasoning.py  (+2 more)
(+7 files in other folders)
