[project]
name = "langchain-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix-otel>=0.16.0",
    "deepagents>=0.6.11",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-deepseek>=1.0.1",
    "langchain-ollama>=1.1.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
